--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Simplified require in electron applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "electron ./tests"
   },
   "keywords": [
     "electron",
@@ -16,5 +16,11 @@
     "rq"
   ],
   "author": "brrd",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "electron-prebuilt": "^1.2.5",
+    "mocha": "^2.5.3"
+  },
+  "dependencies": {}
 }
